# homelab-devops

./: README.md  homelab-lesson-plan.md
.github/workflows/: python-api.yml
infra/helm/monitoring/: values.yaml
infra/helm/python-api/: Chart.yaml  values.yaml
infra/helm/python-api/dashboards/: python-api.json
infra/helm/python-api/templates/: dashboard-configmap.yaml  deployment.yaml  prometheusrule.yaml  servicemonitor.yaml
infra/k8s/: argocd-app-python-api.yaml
ros/robot_sim/: Dockerfile
ros/robot_sim/src/turtle_chase/: CMakeLists.txt  package.xml
ros/robot_sim/src/turtle_chase/src/: chase_node.cpp
ros/robot_sim/src/turtle_chase_py/: package.xml  scenario_runner.py  setup.py
services/python-api/: Dockerfile  requirements.txt
services/python-api/src/: main.py
services/python-api/tests/: test_main.py
