<?xml version="1.0"?>
<package format="3">
  <name>turtle_chase_py</name>
  <version>0.1.0</version>
  <description>Python scenario test driver.</description>
  <maintainer email="ajlal.jalil@gmail.com">Jay</maintainer>
  <license>MIT</license>

  <!--- ament_python is the Python equivalent of ament_cmake. -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!--- rclpy = ROS 2 Python client library -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!--- Linters and pytest for 'colcon test' -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
